--- a/app/src/main/res/drawable/custom_button_background.xml
+++ b/app/src/main/res/drawable/custom_button_background.xml
@@ -3,14 +3,14 @@
     android:color="@color/ripple_color">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="8dp"/>
+            <corners android:radius="12dp"/>
             <gradient
-                android:startColor="@color/button_gradient_start"
-                android:endColor="@color/button_gradient_end"
+                android:startColor="@color/purple_500"
+                android:endColor="@color/purple_700"
                 android:angle="45"/>
             <stroke
-                android:width="1dp"
-                android:color="@color/button_stroke"/>
+                android:width="2dp"
+                android:color="@color/purple_700"/>
         </shape>
     </item>
 </ripple>
