--- a/app/src/main/res/drawable/custom_button_background.xml
+++ b/app/src/main/res/drawable/custom_button_background.xml
@@ -5,12 +5,12 @@
         <shape android:shape="rectangle">
             <corners android:radius="12dp"/>
             <gradient
-                android:startColor="@color/purple_500"
-                android:endColor="@color/purple_700"
+                android:startColor="@color/button_gradient_start"
+                android:endColor="@color/button_gradient_end"
                 android:angle="45"/>
             <stroke
                 android:width="2dp"
-                android:color="@color/purple_700"/>
+                android:color="@color/button_stroke"/>
         </shape>
     </item>
 </ripple>
